--- a/index.html
+++ b/index.html
@@ -2,29 +2,32 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Bogui coming soon</title>
-  <meta name="description" content="Bogui">
-  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <link rel="stylesheet" href="css/soon.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <title>Bogui: Design and craftsmanship from Colombia</title>
+  <meta name="description" content="Bogui is an online store that features modern and colorful home goods handcrafted in partnership with Colombian artisans." />
+  <link rel="canonical" href="https://www.bogui.co/" />
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
-  <div class="fullscreen background" style="background-image:url('images/flower.jpg');" data-img-width="1600" data-img-height="1020">
-    <div class="content-a">
-      <div class="content-b">
-        bogui
-        <br />
-        <a href="https://www.facebook.com/boguishop/" class="social-links"><i class="fa fa-facebook"></i></a>
-        <a href="https://www.instagram.com/boguishop/" class="social-links"><i class="fa fa-instagram"></i></a>
-
-      </div>
-    </div>
-  </div>
-
-
-
-  <script src="js/centered.js"></script>
+    <header>
+        <div class="row" style="background-color: #9abda2;padding: 10px 0;text-align: center;width: 100%;color: #000;"></div>
+        <h1><img class="logo" src="images/logo.webp" alt="Bogui logo"></h1>
+    </header>
+    <main>
+        <div class="buy">
+            <h2>Shop our products</h2>
+            <p>On Instagram <a href="https://www.instagram.com/bogui.co">@bogui.co</a></p>
+            <p>On Facebook <a href="https://www.instagram.com/bogui.co">@bogui.co</a></p></p>
+            <p>&nbsp;</p>
+        </div>
+        <div class="about">
+            <h2>About Us</h2>
+            <p>BOGUI was founded in 2014. Canadian based brand with Colombian roots.</p>
+            <p>Born from our desire to promote the positive image of our country and the work of its talented and creative people. Our goal is to create a range of simple and modern objects crafted by creative Colombian talents with sustainable materials & methods.</p>
+            <p>&nbsp;</p>
+            <p><img class="aboutimage" src="images/puntilla-sac-seau-natural-3_2048x2048.jpg" alt="Puntilla bag"></p>
+        </div>
+    </main>
 </body>
 </html>
