--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Bogui: Design and craftsmanship from Colombia</title>
-  <meta name="description" content="Bogui is an online store that features modern and colorful home goods handcrafted in partnership with Colombian artisans." />
-  <link rel="canonical" href="https://www.bogui.co/" />
-  <link rel="stylesheet" href="css/styles.css">
+    <meta charset="utf-8">
+    <title>Bogui: Design and craftsmanship from Colombia</title>
+    <meta name="description" content="Bogui is an online store that features modern and colorful home goods handcrafted in partnership with Colombian artisans." />
+    <link rel="canonical" href="https://www.bogui.co/" />
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">
 </head>
 
 <body>
@@ -17,8 +18,8 @@
     <main>
         <div class="buy">
             <h2>Shop our products</h2>
-            <p>On Instagram <a href="https://www.instagram.com/bogui.co">@bogui.co</a></p>
-            <p>On Facebook <a href="https://www.instagram.com/bogui.co">@bogui.co</a></p></p>
+            <p><a href="https://www.instagram.com/bogui.co" class="social-links"><i class="fab fa-instagram"></i></a> On Instagram</p>
+            <p><a href="https://www.facebook.com/boguishop" class="social-links"><i class="fab fa-facebook"></i></a> On Facebook</p>
             <p>&nbsp;</p>
         </div>
         <div class="about">
