--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82998024-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-82998024-1');
+    </script>
+    
     <meta charset="utf-8">
     <title>Bogui: Design and craftsmanship from Colombia</title>
     <meta name="description" content="Bogui is an online store that features modern and colorful home goods handcrafted in partnership with Colombian artisans." />
