--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="buy">
             <h2>Shop our products</h2>
             <p><a href="https://www.instagram.com/bogui.co" class="social-links"><i class="fab fa-instagram"></i></a> On Instagram</p>
-            <p><a href="https://www.facebook.com/boguishop" class="social-links"><i class="fab fa-facebook"></i></a> On Facebook</p>
+            <p><a href="http://facebook.com/pg/boguishop/shop/" class="social-links"><i class="fab fa-facebook"></i></a> On Facebook</p>
             <p>&nbsp;</p>
         </div>
         <div class="about">
